# chronosolve

./: .gitignore  CHANGELOG.md  CLAUDE.md  Justfile  LICENSE  README.md  pyproject.toml  release-please-config.json
.claude/: launch.json
.github/workflows/: ci.yml  claude.yml  release.yml  security.yml
app/: .prettierignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json
app/public/: nmamit_cse_sem3.yaml
app/src/: App.tsx  main.tsx  routes.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/binaries/: README.md
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  menu.rs  sidecar.rs
app/src/components/: AddRuleMenu.tsx  AdvancedRuleCard.tsx  AdvancedRulesSection.tsx  AnalyticsView.tsx  BrandLogo.tsx  (+42 more)
docs/: usage.md
examples/: nmamit_cse_sem3.yaml
examples/import/: courses.csv  groups.csv  professors.csv  rooms.csv
packaging/: entry.py  solver.spec
scripts/: build_sidecar.sh  convert_legacy_inputs.py  workflow.sh
src/timetable_solver/: __init__.py  cli.py  server.py
tests/: conftest.py  test_annealing.py  test_assumptions.py  test_cli.py  test_examples.py  test_exporters.py  test_hard_constraints.py  test_loader.py  test_models.py  test_problem.py  test_rules_hard.py  test_rules_integration.py  test_rules_soft.py  test_rules_soft_advanced.py  test_scoring.py  test_server.py  test_soft_constraints.py  test_solver.py  test_statistics.py  test_validation.py  verify.py
tests/fixtures/: minimal.yaml  small_school.yaml  vtu_department.yaml
(+130 files in other folders)
