[project]
name = "timetable-solver"
version = "0.1.0"
description = "Generalized university course timetable scheduling solver powered by Google OR-Tools CP-SAT."
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [{ name = "Nihal Rao" }]
readme = "README.md"
dependencies = [
    "ortools==9.15.6755",
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "typer==0.24.1",
    "rich==14.3.3",
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "sse-starlette==3.3.2",
]

[dependency-groups]
dev = ["pytest==9.0.3", "pytest-cov==7.0.0", "ruff==0.15.5", "httpx==0.28.1"]

[project.scripts]
timetable = "timetable_solver.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timetable_solver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
